--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-dash-core-components==0.17.0
-dash==0.19.0
+dash-core-components>=0.17.0
+dash>=0.19.0
 dash-table-experiments==0.5.3
 dash-html-components==0.8.0
-plotly==2.3.0
+plotly>=2.3.0
 pandas==0.22.0
 quandl>=3.3.0
 fix_yahoo_finance>==0.0.21
